# MappingLogic-cpp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
mappings/raw/mappings/processed/: class_mapping.json
src/: main.cpp
src/logic/: Mapping.cpp  Mapping.h  Merge.cpp  Merge.h
